manifests/deploy-tomcat.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: default
spec:
  selector:
    app: tomcat
    release: canary
  ports:
  - name: http
    port: 8080
    targetPort: 8080




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
     app: tomcat
     release: canary
  template:
    metadata:
      labels: 
        app: tomcat
        release: canary
    spec: 
      containers:
      - name: tomcat
        image: tomcat:latest
        ports: 
        - name: http
          containerPort: 8080
